# ov6

./: .editorconfig  .gdbinit.tmpl-riscv  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/prompts/: rustdoc.prompt.md
crates/block_io/: Cargo.toml
crates/common/ov6_syscall/: Cargo.toml
crates/common/ov6_syscall/src/: error.rs  lib.rs  register.rs  syscall.rs
crates/common/safe_cast/: Cargo.toml
crates/common/safe_cast/src/: lib.rs
crates/kernel/lru/: Cargo.toml
crates/kernel/mutex_api/: Cargo.toml
crates/kernel/mutex_api/src/: lib.rs
crates/kernel/ov6_kernel/: Cargo.toml  build.rs  kernel.ld
crates/kernel/ov6_kernel/src/: cpu.rs  error.rs  init.rs  main.rs  start.rs
crates/kernel/ov6_kernel/src/console/: mod.rs  print.rs  uart.rs
crates/kernel/ov6_kernel/src/device/: e1000.rs  mod.rs  pci.rs  test.rs
crates/kernel/ov6_kernel/src/file/: alloc.rs  common.rs  device.rs  mod.rs
crates/kernel/ov6_kernel/src/fs/: block_io.rs  data_block.rs  log.rs  mod.rs  ops.rs  path.rs  virtio_disk.rs
crates/kernel/ov6_kernel/src/fs/inode/: directory.rs  mod.rs
crates/kernel/ov6_kernel/src/interrupt/: clic.rs  kernel_vec.rs  mod.rs  plic.rs  timer.rs  trampoline.rs  trap.rs
crates/kernel/ov6_kernel/src/memory/: addr.rs  heap.rs  layout.rs  mod.rs  page.rs  page_allocator.rs  page_manager.rs  page_table.rs  vm_kernel.rs  vm_user.rs
crates/kernel/ov6_kernel/src/memory/page_table/: entry.rs  iter.rs  mod.rs
crates/kernel/ov6_kernel/src/net/: arp.rs  ethernet.rs  ipv4.rs  mod.rs  udp.rs
crates/kernel/ov6_kernel/src/proc/: elf.rs  exec.rs  mod.rs  ops.rs  scheduler.rs  wait_lock.rs
crates/kernel/ov6_kernel/src/sync/: sleep_lock.rs  spin_lock.rs
crates/kernel/ov6_kernel/src/syscall/: file.rs  mod.rs  net.rs  proc.rs  system.rs
crates/lru/: Cargo.toml
crates/mutex_api/: Cargo.toml
crates/once_init/: Cargo.toml
crates/once_init/src/: lib.rs
crates/ov6_syscall/: Cargo.toml
crates/ov6_syscall/src/: error.rs  lib.rs  register.rs  syscall.rs
crates/ov6_types/: Cargo.toml
crates/ov6_types/src/: fs.rs  lib.rs  process.rs
crates/ov6_types/src/os_str/: mod.rs  os_string.rs
crates/ov6_types/src/path/: mod.rs  path_buf.rs
crates/ov6_user_lib/: Cargo.toml  user.ld
crates/ov6_user_lib/src/: alloc.rs  env.rs  error.rs  fs.rs  lib.rs  macros.rs  pipe.rs  process.rs  thread.rs  time.rs
crates/ov6_user_lib/src/io/: mod.rs  stdio.rs
crates/ov6_user_lib/src/io/buffered/bufreader/: buffer.rs  mod.rs
crates/ov6_user_lib/src/os/: fd.rs  mod.rs
crates/ov6_user_lib/src/os/ov6/syscall/: ffi.rs  mod.rs
crates/slab_allocator/: Cargo.toml
crates/slab_allocator/src/: lib.rs
crates/user/ov6_initcode/: Cargo.toml  build.rs
crates/user/ov6_services/: Cargo.toml
crates/user/ov6_user_lib/: Cargo.toml  build.rs  user.ld
crates/user/ov6_user_lib/src/: alloc.rs  backtrace.rs  env.rs  error.rs  fs.rs  lib.rs  net.rs  pipe.rs  process.rs  rt.rs  thread.rs  time.rs
crates/user/ov6_user_lib/src/io/: mod.rs  stdio.rs
crates/user/ov6_user_lib/src/io/buffered/: bufwriter.rs  linewriter.rs  linewritershim.rs  mod.rs
crates/user/ov6_user_lib/src/io/buffered/bufreader/: mod.rs
crates/user/ov6_user_lib/src/os/: fd.rs
crates/user/ov6_user_lib/src/os/ov6/syscall/: ffi.rs  mod.rs
crates/user/ov6_user_lib/src/process/: builder.rs  mod.rs
crates/user/ov6_user_lib/src/sync/: spin.rs
crates/user/ov6_user_tests/: Cargo.toml
crates/user/ov6_user_tests/src/: lib.rs  macros.rs  test_runner.rs  traits.rs
crates/user/ov6_utilities/: Cargo.toml
crates/user/ov6_utilities/src/: lib.rs
crates/utils/ov6_fs_utilities/: Cargo.toml
crates/utils/ov6_fs_utilities/src/: main.rs
crates/utils/ov6_integration_tests/: Cargo.toml
crates/utils/ov6_integration_tests/src/: gdb.rs  helper.rs  lib.rs  logged_command.rs  monitor.rs  qemu.rs  runner.rs  utils.rs
crates/utils/ov6_integration_tests/tests/: alarmtest.rs  cowtest.rs  nettest.rs  shutdown.rs  syscall.rs  usertests.rs  utilites.rs  utilities.rs
crates/utils/ov6_net_utilities/: Cargo.toml
crates/xv6_user_lib/: Cargo.toml
crates/xv6_user_lib/src/: alloc.rs  env.rs  error.rs  fs.rs  io.rs  lib.rs  macros.rs  os.rs  pipe.rs  process.rs  syscall.rs  thread.rs
crates/xv6_user_lib/src/io/: mod.rs  stdio.rs
crates/xv6_user_lib/src/io/buffered/: mod.rs
crates/xv6_user_lib/src/io/buffered/bufreader/: buffer.rs
crates/xv6_user_lib/src/os/: fd.rs  mod.rs
crates/xv6_user_lib/src/os/xv6/syscall/: ffi.rs  mod.rs
crates/xv6_user_lib/src/sync/: spin.rs
kernel/: Cargo.toml  defs.h  fs.h  kernel.ld  main.c  memlayout.h  param.h  proc.h  riscv.h  syscall.h  trampoline.S
kernel/src/: bio.rs  console.rs  cpu.rs  error.rs  exec.rs  fcntl.rs  file.rs  fs.rs  interrupt.rs  kalloc.rs  kernel_vec.rs  lib.rs  log.rs  main.rs  memlayout.rs  param.rs  pipe.rs  plic.rs  print.rs  proc.rs  sleeplock.rs  spinlock.rs  start.rs  stat.rs  syscall.rs  syscall_file.rs  syscall_proc.rs  trampoline.rs  trap.rs  uart.rs  virtio.rs  virtio_disk.rs  vm.rs
kernel/src/console/: mod.rs  print.rs  uart.rs
kernel/src/entry/: entry.s  mod.rs
kernel/src/file/: alloc.rs  common.rs  device.rs  inode.rs  mod.rs  pipe.rs
kernel/src/fs/: block_io.rs  data_block.rs  log.rs  mod.rs  ops.rs  path.rs  repr.rs  stat.rs  virtio.rs  virtio_disk.rs
kernel/src/fs/inode/: alloc.rs  content.rs  directory.rs  mod.rs  table.rs
kernel/src/interrupt/: kernel_vec.rs  mod.rs  plic.rs  timer.rs  trampoline.rs  trap.rs
kernel/src/memory/: addr.rs  heap.rs  kernel.rs  layout.rs  mod.rs  page.rs  page_table.rs  user.rs  vm.rs  vm_kernel.rs  vm_user.rs
kernel/src/proc/: elf.rs  exec.rs  mod.rs  ops.rs  scheduler.rs  switch.rs  wait_lock.rs
kernel/src/sync/: mod.rs  once.rs  sleep_lock.rs  spin_lock.rs
kernel/src/syscall/: file.rs  mod.rs  proc.rs  system.rs
mkfs/: Cargo.toml
mkfs/src/: main.rs
scripts/: addr2line  objdump  readelf
tests/: Cargo.toml
user/: Cargo.toml  build.rs  grind.c  init.c  ulib.c  user.ld  usertests.c
user/src/: lib.rs
(+34 files in other folders)
