cargo-features = ["per-package-target"]

[package]
name = "kernel"
version.workspace = true
edition.workspace = true
forced-target = "riscv64gc-unknown-none-elf"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bitflags.workspace = true
block_io.workspace = true
dataview.workspace = true
mutex_api.workspace = true
once_init.workspace = true
page_alloc.workspace = true
riscv.workspace = true
xv6_fs_types.workspace = true
