cargo-features = ["per-package-target"]

[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

forced-target = "riscv64gc-unknown-none-elf"

[lints]
workspace = true

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
arrayvec.workspace = true
bitflags.workspace = true
block_io.workspace = true
dataview.workspace = true
mutex_api.workspace = true
once_init.workspace = true
ov6_fs_types.workspace = true
ov6_kernel_params.workspace = true
ov6_syscall.workspace = true
ov6_types.workspace = true
page_alloc.workspace = true
riscv.workspace = true
slab_allocator.workspace = true
strum.workspace = true
thiserror.workspace = true

[features]
initcode_env = []
