cargo-features = ["per-package-target"]

[package]
name = "user"
version.workspace = true
edition.workspace = true

forced-target = "riscv64gc-unknown-none-elf"

[[bin]]
name = "cat"
test = false
bench = false

[[bin]]
name = "echo"
test = false
bench = false

[[bin]]
name = "forktest"
test = false
bench = false

[[bin]]
name = "hello"
test = false
bench = false

[dependencies]
xv6_user_lib.workspace = true
