[package]
name = "ov6_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
alloc = []

[dependencies]
dataview.workspace = true
