[package]
name = "ov6_user_lib"
version.workspace = true
edition.workspace = true

[dependencies]
dataview.workspace = true
memchr.workspace = true
once_init.workspace = true
ov6_fs_types.workspace = true
ov6_syscall.workspace = true
strum.workspace = true
thiserror.workspace = true

[features]
default = []
std = []
