cargo-features = ["per-package-target"]

[package]
name = "xv6_user_lib"
version.workspace = true
edition.workspace = true

forced-target = "riscv64gc-unknown-none-elf"

[lib]
crate-type = ["rlib"]
test = false
bench = false

[dependencies]
dataview.workspace = true
memchr.workspace = true
once_init.workspace = true
strum.workspace = true
thiserror.workspace = true
xv6_fs_types.workspace = true
xv6_syscall.workspace = true
