[package]
name = "xv6_user_lib"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]
test = false
bench = false

[dependencies]
dataview.workspace = true
memchr.workspace = true
once_init.workspace = true
strum.workspace = true
thiserror.workspace = true
xv6_fs_types.workspace = true
xv6_syscall.workspace = true

[features]
default = []
std = []
