[package]
name = "ov6_syscall"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
dataview.workspace = true
ov6_types.workspace = true
safe_cast = { version = "0.1.0", path = "../safe_cast" }
strum.workspace = true
thiserror.workspace = true
