[package]
name = "lru"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
mutex_api.workspace = true

[dev-dependencies]
mutex_api = { workspace = true, features = ["std"] }
