[package]
name = "ov6_kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
test = false
bench = false

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
arraydeque.workspace = true
arrayvec.workspace = true
bitflags.workspace = true
block_io.workspace = true
dataview.workspace = true
derive_more.workspace = true
mutex_api.workspace = true
once_init.workspace = true
ov6_fs_types.workspace = true
ov6_kernel_params.workspace = true
ov6_syscall.workspace = true
ov6_types.workspace = true
page_alloc.workspace = true
riscv.workspace = true
safe_cast = { version = "0.1.0", path = "../../common/safe_cast" }
slab_allocator.workspace = true
strum.workspace = true
thiserror.workspace = true
vcell.workspace = true
