[package]
name = "ov6_services"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
ov6_user_lib = { workspace = true, features = ["lang_items"] }

[lints]
workspace = true

[dev-dependencies]
ov6_user_lib = { workspace = true, features = ["test"] }
