[package]
name = "ov6_user_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
dataview.workspace = true
memchr.workspace = true
once_init.workspace = true
ov6_fs_types.workspace = true
ov6_syscall.workspace = true
ov6_types = { workspace = true, features = ["alloc"] }
thiserror.workspace = true

[features]
default = []
std = []
