[package]
name = "ov6_integration_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
fs4.workspace = true
rand.workspace = true
regex = "1.11.1"
tokio = { workspace = true, features = ["io-util", "net", "process", "rt", "sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
